route added-validation-toastAdded

--- a/src/styles/existingUser.module.css
+++ b/src/styles/existingUser.module.css
@@ -23,7 +23,7 @@
 }
 .title {
   font-size: 20px;
-  color: white;
+  color: #ffffff;
   font-family: "Nunito";
   text-align: center;
   padding: 10px;
@@ -32,6 +32,7 @@
   border: 0px !important;
   border-radius: 25px !important;
   background-color: #424459 !important;
+  color: #ffffff !important;
 }
 .subTitle {
   color: #424459;
